--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#Configurations
+spring.datasource.url = jdbc:mysql://localhost:3306/foodtruck_schema?useSSL=false
+spring.datasource.username = root
+spring.datasource.password = password
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jpa.hibernate.ddl-auto = update
